# nvidia-nim-claude-code

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
api/: model_router.py  routes.py  runtime.py
cli/: manager.py
config/: logging_config.py  provider_catalog.py  settings.py
providers/: __init__.py  defaults.py  registry.py
